# battery_manager

./: CMakeLists.txt  battery.ops  battery_ROStopics.ops  mainpage.dox  manifest.xml  package.xml  start.launch
demo/: parameters.yaml  start.launch
parameters/: parameters.yaml
src/: battery_manager.cpp  battery_manager2.cpp  battery_manager_laptop.cpp  test_client.cpp
